// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MenuListBackground /> snapshot should match snapshot 1`] = `
<MenuListBackground>
  <FocusRing>
    <FocusRing
      focusClass="md-focus-ring-wrapper children"
      focusRingClass="md-focus-ring-wrapper children"
    >
      <ul
        className="md-menu-list-background-wrapper"
        data-color="primary"
        onBlur={[Function]}
        onFocus={[Function]}
      />
    </FocusRing>
  </FocusRing>
</MenuListBackground>
`;

exports[`<MenuListBackground /> snapshot should match snapshot with className 1`] = `
<MenuListBackground
  className="example-class"
>
  <FocusRing>
    <FocusRing
      focusClass="md-focus-ring-wrapper children"
      focusRingClass="md-focus-ring-wrapper children"
    >
      <ul
        className="example-class md-menu-list-background-wrapper"
        data-color="primary"
        onBlur={[Function]}
        onFocus={[Function]}
      />
    </FocusRing>
  </FocusRing>
</MenuListBackground>
`;

exports[`<MenuListBackground /> snapshot should match snapshot with color 1`] = `
<MenuListBackground
  color="tertiary"
>
  <FocusRing>
    <FocusRing
      focusClass="md-focus-ring-wrapper children"
      focusRingClass="md-focus-ring-wrapper children"
    >
      <ul
        className="md-menu-list-background-wrapper"
        data-color="tertiary"
        onBlur={[Function]}
        onFocus={[Function]}
      />
    </FocusRing>
  </FocusRing>
</MenuListBackground>
`;

exports[`<MenuListBackground /> snapshot should match snapshot with id 1`] = `
<MenuListBackground
  id="example-id"
>
  <FocusRing>
    <FocusRing
      focusClass="md-focus-ring-wrapper children"
      focusRingClass="md-focus-ring-wrapper children"
    >
      <ul
        className="md-menu-list-background-wrapper"
        data-color="primary"
        id="example-id"
        onBlur={[Function]}
        onFocus={[Function]}
      />
    </FocusRing>
  </FocusRing>
</MenuListBackground>
`;

exports[`<MenuListBackground /> snapshot should match snapshot with style 1`] = `
<MenuListBackground
  style={
    Object {
      "color": "pink",
    }
  }
>
  <FocusRing>
    <FocusRing
      focusClass="md-focus-ring-wrapper children"
      focusRingClass="md-focus-ring-wrapper children"
    >
      <ul
        className="md-menu-list-background-wrapper"
        data-color="primary"
        onBlur={[Function]}
        onFocus={[Function]}
        style={
          Object {
            "color": "pink",
          }
        }
      />
    </FocusRing>
  </FocusRing>
</MenuListBackground>
`;
